grammar.js
    program: $ => repeat(choice(
      $.pragma,
      $.functor_decl,
      $.component_decl,
      $.component_init,
      $.directive,
      $._rule,
      $.fact,
      $.relation_decl,
      $.type_decl,
      $.legacy_type_decl,
      $.preprocessor,
    )),

    // https://gcc.gnu.org/onlinedocs/cpp/preproc-Output.html
    _rule: $ => choice(
      $.monotonic_rule,
      $.subsumptive_rule,
    ),

    // rule ::= atom ( ',' atom )* ':-' disjunction '.' query_plan?
    //
    // https://souffle-lang.github.io/rules#rule
    //
    monotonic_rule: $ => seq(
      field('head', commas1($.atom)),
      ':-',
      field('body', $.disjunction),
      '.',
      field('plan', optional($.query_plan)),
    ),

    // rule ::= atom '<=' atom ':-' disjunction '.' query_plan?
    //
    // https://souffle-lang.github.io/subsumption#subsumptive-rule
    query_plan: $ => seq(
      '.plan',
      commas1(seq(
        field('number', NATURAL),
        ':',
        parens(commas(field('order', NATURAL))),
      ))
    ),

    // disjunction ::= conjunction ( ';' conjunction )*
    //
    // https://souffle-lang.github.io/rules#disjunction-1
    //
    disjunction: $ => prec.left(seq(
      $.conjunction,
      repeat(seq(';', $.conjunction)),
    )),

    // conjunction ::= '!'* ( atom | constraint | '(' disjunction ')' ) ( ',' '!'* ( atom | constraint | '(' disjunction ')' ) )*
    //
    // https://souffle-lang.github.io/rules#query-plan-1
    negation: $ => prec.left(2, '!'),  // conflict: unary_op
    conjunction: $ => commas1(seq(
      repeat($.negation),
      choice(
        $.atom,
        $._constraint,
        parens($.disjunction)
      ),
    )),

    // constraint ::= argument ( '<' | '>' | '<=' | '>=' | '=' | '!=' ) argument
    //            | ( 'match' | 'contains' ) '(' argument ',' argument ')'
    //            | 'true'
    //            | 'false'
    //
    _constraint: $ => choice(
      $.bool,
      $.comparison,
      $.match,
      $.contains,
    ),

    contains: $ => seq('contains', parens(commas(field('argument', $._argument)))),

    comparison: $ => seq(
      field('left', $._argument),
      field('operator', choice(
        '=',
        '!=',
        '<=',
        '>=',
        '<',
        '>',
      )),
      field('right', $._argument),
    ),

    //
    //
    //
    fact: $ => seq(
      field('atom', $.atom),
      '.',
      field('plan', optional($.query_plan)),
    ),

    // atom ::= qualified_name '(' ( argument ( ',' argument )* )? ')'
    //
    // https://souffle-lang.github.io/facts#atom
    //
    atom: $ => seq(
      field('relation', $.qualified_name),
      parens(commas(field('argument', $._argument)))
    ),

    // argument ::=
    //     constant
    //     | variable
    //     | 'nil'
    //     | '[' argument_list ']'
    //     | '$' IDENT ( '(' argument_list ')' )?
    //     | '(' argument ')'
    //     | 'as' '(' argument ',' type_name ')'
    //     | ( userdef_functor | intrinsic_functor ) '(' argument_list ')'
    //     | aggregator
    //     | ( unary_operation | argument binary_operation ) argument
    //
    // https://souffle-lang.github.io/arguments#argument-value
    //
    _argument: $ => choice(
      $.anonymous,
      $.constant,
      $.variable,
      $.nil,
      $.record_constructor,
      $.adt_constructor,
      seq('(', $._argument, ')'),
      $.as,
      $.functor_call,
      $.aggregator,
      $.unary_op,
      $.binary_op,
    ),

    constant: $ => choice(
      $.ipv4,
      $.number,
      $.string,
    ),

    // Are you kidding me?
    number: $ => choice(
      $.float,
      $.integer,
      $.unsigned,
    ),
    // NOTE: This is not anonymized because it is useful in tree-sitter queries.
    integer: $ => choice(
      $.decimal,
      $.hex,
      $.binary,
    ),
    decimal: $ => prec.left(2, /-?[0-9]+/),
    variable: $ => $.ident,
    anonymous: $ => '_',

    functor_call: $ => seq(
      field('functor', choice($.user_defined_functor, $.intrinsic_functor, $.any_functor)),
      parens(commas(field('argument', $._argument))),
    ),

    intrinsic_functor: $ => prec.left(2, choice(  // conflict: aggregator
      // math
      'acos',
      'acosh',
      'asin',
      'asinh',
      'atan',
      'atanh',
      'cos',
      'cosh',
      'exp',
      'log',
      'sin',
      'sinh',
      'tan',
      'tanh',
      // other
      'autoinc',
      'cat',
      'max',
      'min',
      'ord',
      'strlen',
      'substr',
      'to_float',
      'to_number',
      'to_string',
      'to_unsigned',
    )),

    // lower precedence than other functor options
    any_functor: $ => prec(-1, seq(field('name', $.ident))),

    // aggregator  ::= (( ( 'max' | 'mean' | 'min' | 'sum' ) argument | 'count' ) ':' ( '{' disjunction '}' | atom )) |
    //   'range' '(' argument ',' argument (',' argument)? ')'
    //
    // https://souffle-lang.github.io/aggregates#aggregator
    //
    // TODO(lb): Refactor into something more conceptual
    aggregator: $ => seq(
      choice(
        seq(
          choice(
            seq(
              field('aggregator', choice(
                'max',
                'mean',
                'min',
                'sum',
              )),
              field('head', $._argument),
            ),
            'count'
          ),
          ':',
          field('body', choice($.atom, seq('{', $.disjunction, '}')))
        ),
        $.range
      )
    ),

    range: $ => seq(
      'range',
      parens(seq(
        field('low', $._argument),
        ',',
        field('high', $._argument),
        optional(seq(
          ',',
          field('step', $._argument),
        )),
      ))
    ),

    qualified_name: $ => prec.left(dots1($.ident)),
    ident: $ => /(_|\?|[A-Z]|[a-z])(([A-Z]|[a-z])|[0-9]|_|\?)*/,
  }
});

// Local Variables:
// js2-basic-offset: 2
// End:
